# XPE-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug.bat
Game/Code/: CMakeLists.txt
Game/Code/cmake_tools/: CMakeLists.txt
Game/Code/cpp/: game.cpp
Game/Code/include/: game.h
Game/Launcher/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt
editor/config/: editor_config.json  memory_config.json
editor/cpp/: editor.cpp  project_manager.cpp
editor/cpp/core/: file_watcher.cpp  project_manager.cpp
editor/cpp/os/: file_watcher.cpp  process_win32.cpp
editor/include/: editor.h  project_manager.h
editor/include/core/: file_watcher.h  process_manager.h  project_manager.h
editor/include/os/: file_watcher.h  process.h
editor/resources/models/: cube.gltf
editor/shaders/: window.vs
editor/src/: editor.cpp  editor.hpp
editor/src/core/: file_watcher.cpp  file_watcher.hpp  process_manager.hpp  project_manager.cpp  project_manager.hpp
editor/templates/Game/: CMakeLists.txt
engine/: CMakeLists.txt  config.json
engine/cmake_tools/: CMakeLists.txt
engine/cpp/anim/: anim.cpp  anim_manager.cpp  anim_system.cpp  animator.cpp  skeleton_manager.cpp
engine/cpp/audio/: audio_manager.cpp  audio_system.cpp  listener_manager.cpp  listening_manager.cpp
engine/cpp/components/: camera_components.cpp
engine/cpp/controls/: camera.cpp
engine/cpp/core/: align16_allocator.cpp  allocators.cpp  app.cpp  build_game.cpp  camera.cpp  canvas.cpp  config.cpp  d3d11_context.cpp  d3d11_debugger.cpp  debugger.cpp  dispatchers.cpp  event_manager.cpp  events.cpp  file_manager.cpp  file_system.cpp  hardware.cpp  hardware_config.cpp  hardware_manager.cpp  image_manager.cpp  input.cpp  input_manager.cpp  log_manager.cpp  logger.cpp  memory.cpp  memory_manager.cpp  memory_pool.cpp  object.cpp  observers.cpp  rendering.cpp  shader.cpp  stack_allocator.cpp  task_manager.cpp  thread.cpp  threading.cpp  time_manager.cpp  timer.cpp  types.cpp  user_input.cpp  window_manager.cpp  windowing.cpp
engine/cpp/dispatcher/: main_dispatcher.cpp
engine/cpp/ecs/: component.cpp  ecs.cpp  entity.cpp  scene.cpp  scenes.cpp
engine/cpp/geometry/: cube_geometry.cpp  geometries.cpp  geometry.cpp  geometry_manager.cpp  mesh.cpp  mesh_geometry.cpp  plane_geometry.cpp  quad_geometry.cpp  sphere_geometry.cpp  triangle_geometry.cpp  vertices.cpp
engine/cpp/gltf/: gltf.cpp
engine/cpp/importers/: exporter.cpp  importer.cpp
engine/cpp/linux/: linux_hardware.cpp  linux_thread.cpp
engine/cpp/macos/: macos_hardware.cpp
engine/cpp/math/: math_manager.cpp  matrices.cpp  raycast.cpp
engine/cpp/os/: file_manager.cpp  file_manager_win32.cpp  file_watcher.cpp  file_watcher_win32.cpp  hardware_config.cpp  hardware_config_linux.cpp  hardware_config_win.cpp
engine/cpp/physics/: allocators.cpp  callbacks.cpp  collision_manager.cpp  physics.cpp  physics_manager.cpp  physics_system.cpp
engine/cpp/platform/: file_watcher_win32.cpp
engine/cpp/rendering/: batching.cpp  bindings.cpp  buffers.cpp  camera.cpp  camera_manager.cpp  canvas.cpp  context.cpp  debugger.cpp  monitor.cpp  render_manager.cpp  render_system.cpp  renderer.cpp  shader.cpp  shaders.cpp  shadow_manager.cpp  skybox_manager.cpp  texture.cpp  transforming.cpp  vertex.cpp  widget_manager.cpp  widgets.cpp
engine/cpp/res/: json.cpp  model_loader.cpp  xml.cpp
engine/cpp/stl/: string.cpp
engine/cpp/ttf/: text_renderer.cpp  ttf_manager.cpp
engine/cpp/ui/: core.cpp
engine/cpp/viewer/: viewer.cpp
engine/cpp/win/: win_hardware.cpp  win_thread.cpp
engine/engine_shaders/: batching.shader  camera.shader  canvas.ps  canvas.vs  gamma_correction.shader  instance.shader  instancing.shader  lighting.shader  lighting_matrices.shader  material.shader  monitor.shader  particle.shader  pbr.shader  pbr_light.shader  shadow.shader  skeleton.shader  slots.shader  ssao.shader  tonemap.shader  transforming.shader  types.shader  utils.shader  viewport.shader
engine/engine_shaders/controls/: camera.shader
engine/engine_shaders/draw/: canvas.ps  canvas.vs  (+14 more)
engine/include/: launcher.h  pch.h
engine/scripts/: CMakeLists.txt  game_system.cpp  game_system.hpp
engine/src/: allocators.cpp  allocators.hpp  anim_manager.cpp  anim_manager.hpp  app.cpp  app.hpp  app_config.hpp  assimp_manager.cpp  assimp_manager.hpp  audio_context.hpp  audio_core.hpp  audio_manager.cpp  audio_manager.hpp  bindings.cpp  bindings.hpp  buffers.cpp  buffers.hpp  camera_manager.cpp  camera_manager.hpp  canvas.cpp  canvas.hpp  codes_gamepad.hpp  codes_keyboard.hpp  codes_mouse.hpp  components.cpp  components.hpp  dx11_hardware_manager.cpp  dx11_render_context.cpp  dx11_render_debugger.cpp  ecs.cpp  ecs.hpp  editor_manager.cpp  editor_manager.hpp  event_manager.cpp  event_manager.hpp  file_manager.cpp  file_manager.hpp  font_manager.cpp  font_manager.hpp  geometry_manager.cpp  (+71 more)
loader/: CMakeLists.txt
loader/cmake_tools/: CMakeLists.txt
loader/cpp/: anim_loader.cpp  assimp_manager.cpp  audio_loader.cpp  font_loader.cpp  material_loader.cpp  model_loader.cpp  skelet_loader.cpp  skeleton_loader.cpp  skin_loader.cpp  stream_audio_loader.cpp  texture_loader.cpp
loader/include/: anim_loader.h  assimp_manager.h  assimp_types.h  audio_loader.h  font_loader.h  material_loader.h  model_loader.h  skelet_loader.h  skeleton_loader.h  skin_loader.h  stream_audio_loader.h  texture_loader.h
loader/src/: anim_loader.cpp  anim_loader.hpp  assimp_manager.cpp  assimp_manager.hpp  audio_loader.cpp  audio_loader.hpp  build.hpp  font_loader.cpp  font_loader.hpp  material_loader.cpp  material_loader.hpp  model_loader.cpp  model_loader.hpp  skeleton_loader.cpp  skeleton_loader.hpp  texture_loader.cpp  texture_loader.hpp
samples/: CMakeLists.txt  config.json  test_config.json
samples/Window/: main.cpp  test_config.cpp  test_config.h  test_config.hpp
samples/config/: app_config.json  config.json  memory_config.json  test_config.json  xml_config.xml
samples/shaders/: skeletal_anim.vs  text.ps  text.vs  text2d.ps  text2d.vs  text3d.vs  window.ps  window.vs  window2d.ps  window2d.vs
(+10915 files in other folders)
